--- a/style.scss
+++ b/style.scss
@@ -5,5 +5,7 @@
 @use './styles/about';
 @use './styles/projects';
 @use './styles/solutions';
+@use './styles/events';
 @use './styles/sertificate';
+@use './styles/resources';
 @use './styles/footer';
