--- a/styles/about.scss
+++ b/styles/about.scss
@@ -1,15 +1,7 @@
 @use './vars';
 
 .about {
-  background-color: #ebf1f4;
-  padding-top: 160px;
-
-  @media screen and (max-width: 1240px) {
-    padding-top: 120px;
-  }
-  @media screen and (max-width: 767px) {
-    padding-top: 100px;
-  }
+  // background-color: #ebf1f4;
 
   &__text {
     padding-bottom: 20px;
