--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @font-face {
   font-display: swap;
   font-family: "Open Sans";
-  src: url("/fonts/open-sans-v36-cyrillic_latin-regular.woff2") format("woff2");
+  src: url("/fonts/open-sans-regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
 }
@@ -10,19 +10,19 @@
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 500;
-  src: url("/fonts/open-sans-v40-cyrillic_latin-500.woff2") format("woff2");
+  src: url("/fonts/open-sans-500.woff2") format("woff2");
 }
 @font-face {
   font-display: swap;
   font-family: "Open Sans";
   font-style: normal;
   font-weight: 600;
-  src: url("/fonts/open-sans-v40-cyrillic_latin-600.woff2") format("woff2");
+  src: url("/fonts/open-sans-600.woff2") format("woff2");
 }
 @font-face {
   font-display: swap;
   font-family: "Open Sans";
-  src: url("/fonts/open-sans-v36-cyrillic_latin-700.woff2") format("woff2");
+  src: url("/fonts/open-sans-700.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
 }
@@ -182,7 +182,6 @@ iframe {
 @media screen and (max-width: 767px) {
   .order-btn {
     font-size: 14px;
-    padding: 10px 40px;
     border-radius: 7px;
   }
 }
@@ -196,22 +195,35 @@ iframe {
   background-color: #fff;
 }
 
-section {
+.section {
   padding: 70px 0;
 }
 @media screen and (max-width: 1240px) {
-  section {
+  .section {
     padding: 50px 0;
   }
 }
 @media screen and (max-width: 767px) {
-  section {
+  .section {
     padding: 40px 0;
   }
 }
 @media screen and (max-width: 575px) {
-  section {
+  .section {
     padding: 30px 0;
+  }
+}
+.section_first {
+  padding-top: 160px;
+}
+@media screen and (max-width: 1240px) {
+  .section_first {
+    padding-top: 120px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .section_first {
+    padding-top: 100px;
   }
 }
 
@@ -302,11 +314,6 @@ section {
     max-width: 180px;
   }
 }
-@media screen and (max-width: 575px) {
-  .header__logo {
-    max-width: 150px;
-  }
-}
 .header__logo img {
   width: 100%;
   height: auto;
@@ -372,11 +379,6 @@ section {
     font-size: 16px;
   }
 }
-@media screen and (max-width: 575px) {
-  .header__nav .nav__item a {
-    font-size: 14px;
-  }
-}
 .header__burger-btn {
   display: none;
   background: transparent;
@@ -421,20 +423,6 @@ section {
   opacity: 0;
 }
 
-.about {
-  background-color: #ebf1f4;
-  padding-top: 160px;
-}
-@media screen and (max-width: 1240px) {
-  .about {
-    padding-top: 120px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .about {
-    padding-top: 100px;
-  }
-}
 .about__text {
   padding-bottom: 20px;
 }
@@ -591,19 +579,6 @@ section {
   padding-bottom: 15px;
 }
 
-.solutions {
-  padding-bottom: 100px;
-}
-@media screen and (max-width: 1240px) {
-  .solutions {
-    padding-bottom: 80px;
-  }
-}
-@media screen and (max-width: 767px) {
-  .solutions {
-    padding-bottom: 60px;
-  }
-}
 .solutions__tabs-bar {
   display: flex;
   margin-bottom: 50px;
@@ -906,11 +881,12 @@ section {
 }
 .consulting .twi__list {
   padding-left: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
 @media screen and (max-width: 575px) {
   .consulting .twi__list {
     padding-left: 10px;
+    margin-bottom: 30px;
   }
 }
 .consulting .twi__item {
@@ -931,9 +907,32 @@ section {
   }
 }
 
-.sertificates {
-  background-color: #ebf1f4;
+.events__text {
+  margin-bottom: 20px;
 }
+.events__text span {
+  color: #11597F;
+  font-weight: 700;
+}
+.events__imgs {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+@media screen and (max-width: 767px) {
+  .events__imgs {
+    gap: 10px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .events__imgs {
+    flex-direction: column;
+  }
+}
+.events__img img {
+  width: 100%;
+}
+
 .sertificates__text {
   margin-bottom: 20px;
 }
@@ -978,6 +977,13 @@ section {
   margin-bottom: 0;
 }
 
+.resources__head {
+  display: flex;
+  justify-content: space-between;
+}
+.resources__img img {
+  width: 100%;
+}
 .footer {
   padding: 60px 0 30px;
 }
@@ -1098,4 +1104,7 @@ section {
   .footer__text {
     font-size: 10px;
   }
+}
+.footer__text a:hover {
+  color: #11597F;
 }/*# sourceMappingURL=style.css.map */
